crates/ridge-resolve/tests/snapshots/snapshots__t14_game_of_life.snap
---
source: crates/ridge-resolve/tests/snapshots.rs
expression: snap
---
ResolvedSnapshot {
    errors: [],
    nid_count: 771,
    stamped_bindings: 175,
    binding_kind_counts: {
        "Local": 120,
        "ModuleSymbol": 15,
        "StdlibSymbol": 40,
    },
    import_aliases: [
        "<bare> -> BuiltinStdlib(0)",
        "<bare> -> BuiltinStdlib(17)",
        "<bare> -> BuiltinStdlib(21)",
        "<bare> -> BuiltinStdlib(7)",
        "<bare> -> BuiltinStdlib(8)",
        "Cli -> BuiltinStdlib(14)",
        "Io -> BuiltinStdlib(9)",
        "List -> BuiltinStdlib(4)",
        "Option -> BuiltinStdlib(7)",
        "Time -> BuiltinStdlib(11)",
    ],
}
