crates/ridge-resolve/tests/snapshots/snapshots__t14_log_analyzer.snap
---
source: crates/ridge-resolve/tests/snapshots.rs
expression: snap
---
ResolvedSnapshot {
    errors: [],
    nid_count: 661,
    stamped_bindings: 168,
    binding_kind_counts: {
        "Constructor": 7,
        "Local": 88,
        "ModuleSymbol": 18,
        "StdlibSymbol": 55,
    },
    import_aliases: [
        "<bare> -> BuiltinStdlib(0)",
        "<bare> -> BuiltinStdlib(0)",
        "<bare> -> BuiltinStdlib(17)",
        "<bare> -> BuiltinStdlib(22)",
        "<bare> -> BuiltinStdlib(3)",
        "<bare> -> BuiltinStdlib(7)",
        "<bare> -> BuiltinStdlib(8)",
        "Cli -> BuiltinStdlib(14)",
        "Env -> BuiltinStdlib(13)",
        "Fs -> BuiltinStdlib(10)",
        "Io -> BuiltinStdlib(9)",
        "List -> BuiltinStdlib(4)",
        "Map -> BuiltinStdlib(5)",
        "Option -> BuiltinStdlib(7)",
    ],
}
