crates/ridge-resolve/tests/snapshots/snapshots__t14_url_shortener.snap
---
source: crates/ridge-resolve/tests/snapshots.rs
expression: snap
---
ResolvedSnapshot {
    errors: [],
    nid_count: 424,
    stamped_bindings: 104,
    binding_kind_counts: {
        "ActorName": 1,
        "Local": 60,
        "ModuleSymbol": 10,
        "StdlibSymbol": 33,
    },
    import_aliases: [
        "<bare> -> BuiltinStdlib(0)",
        "<bare> -> BuiltinStdlib(0)",
        "<bare> -> BuiltinStdlib(17)",
        "<bare> -> BuiltinStdlib(22)",
        "<bare> -> BuiltinStdlib(3)",
        "<bare> -> BuiltinStdlib(7)",
        "<bare> -> BuiltinStdlib(8)",
        "Http -> BuiltinStdlib(18)",
        "Io -> BuiltinStdlib(9)",
        "List -> BuiltinStdlib(4)",
        "Map -> BuiltinStdlib(5)",
        "Option -> BuiltinStdlib(7)",
        "Random -> BuiltinStdlib(12)",
    ],
}
